--- a/views/findTransport.html
+++ b/views/findTransport.html
@@ -368,9 +368,11 @@
                     </div>
                         <div class="panel panel-primary">
                            <div class="panel-heading">
+
                                <label translate="journeyDetails">Journy Details</label>
                            </div>
                            <div class="panel-body">
+                              {{requestReply}}
                              <label class="alert-info">{{noPassengers}}</label><br>
                              <label class="alert-info">{{noTransports}}</label>
                              <div class="">
