--- a/views/newsFromHome.html
+++ b/views/newsFromHome.html
@@ -111,7 +111,7 @@
                                               <div>
                                                   {{news.news}}
                                                    <div ng-if="news.fileType==='image/jpeg' || news.fileType==='image/png'">
-                                                      <a href="#"><img ng-src="/newsImage/{{news.fileName}}" id="1" height="200" width="200" class="thumbnail">
+                                                      <a href="#"><img ng-src="/newsImage/{{news.fileName}}" id="1" height="70%" width="70%" class="thumbnail">
                                                      </a>
                                                    </div>
                                                    <div ng-if="news.fileType==='video/mp4'">
