--- a/views/index.html
+++ b/views/index.html
@@ -28,18 +28,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <!-- <div class="container">
-                      <div class="row">
-                        <div class="col-lg-1 pull-left">
-                          <img src="/assets/img/bird.png" alt="log here" width="110" height="110">
-                        </div>
-                        <div class="col-lg-3 pull-right">
-                          <a class="navbar-brand" href="index.html">
-                              <SPAN class="logStyle" translate="yourhelplabdotcom"></SPAN>
-                          </a>
-                        </div>
-                      </div>
-                    </div>-->
+                      <span class="pull-left">
+                        <span class="logStyle">     Wellcome to </span>
+                        <img ng-src="/assets/img/bird.png" width="90" height="90">
+                        <SPAN class="logStyle" translate="yourhelplabdotcom"></SPAN>
+                      </span>
+                      
+                         <!--  <div class="navbar-brand" href="index.html">
+                            
+                          </div> -->
+                        
+                     
                 </div>
                 <!-- end navbar-header -->
                 <!-- navbar-top-links -->
