--- a/views/thingsToSale.html
+++ b/views/thingsToSale.html
@@ -242,15 +242,12 @@
                                          <option ng-repeat="category in salethingsCategoriesList | filter:filterBy" value="{{category.Id}}">{{category.english}}</option>
                                       </select>
                                     </p>
-
-                                 <!-- <span><a href="#thingsToSaleModal" data-toggle="modal">post things to sell</a></span> -->
-
                                  <span ng-if="permission=='thingsToSale' || permission=='admin'"><a href="/saleItemMeasurments.html">click here to add items</a></span>
                                 </div>
                                  <span class="pull-right"><button ng-click="getBoughtItems()" translate="getBoughtItems" class="btn btn-primary"></button><img src="/assets/img/shoppingCart.jpg" width="30" height="30"><label class="label label-danger">{{numberOfBougtItems}}</label></span>
                                  <!--end user image section-->
-                                 <div ng-show="boughtItems">
-                                            <div class="panel-body">
+                                <div ng-show="boughtItems">
+                                        <div class="panel-body">
                                                <table border="1" style="width:50%">
                                                     <thead>
                                                         <tr>
@@ -285,16 +282,14 @@
                                                     <td class="fa fa-eur" aria-hidden="true" style="font-size:20">{{totalItemsPrice}}</td>
                                                     </tr>
                                                     </tfoot>
-                                                </table>
-                                            </div>
+                                               </table>
+                                        </div>
                                         <div class="panel panel-default" ng-if="boughtThings.length!==0">
-                                          <div class="panel-heading" translate="buyerInfo"></div>
-                                          <div class="panel-body">
-                                             <form role="form" name="name"  enctype="multipart/form-data">
+                                            <div class="panel-heading" translate="buyerInfo"></div>
+                                            <div class="panel-body">
+                                              <form role="form" name="name"  enctype="multipart/form-data">
                                                 <label for="firstName" translate="firstName"></label>
                                                 <input type="text"   name="firstName" ng-model="$parent.firstName" ng-required="true">
-                                                 <!-- <label for="middleName" translate="middelName">middel name</label> -->
-                                                <!-- <input type="text"  ng-model="$parent.middelName"  required> -->
                                                 <label for="surname" translate="surName">sur name</label>
                                                 <input type="text"   ng-model="$parent.surName" required>
                                                 <button translate="next" ng-click="name.$valid && nextToAddressInfo()" class="btn btn-primary">next</button>
@@ -302,7 +297,7 @@
                                               <div class="" ng-show="addressInfo">
                                                  <p style="border-style: solid;border-color: grey;"></p>
                                                  <label translate="addressInfo"></label><br><br>
-                                                 <form name="address">
+                                                <form name="address">
                                                     <label for="country" translate="country"></label><br>
                                                     <autocomplete ng-model="$parent.customerCountry" attr-placeholder="country..." country-enter="onEnter()" click-activation="true" data="countryDatas"  on-type="fillCountry" on-select="countrySelection"></autocomplete>
                                                        <label  translate="postCode">post code</label>
@@ -318,12 +313,12 @@
                                                      <label for="email" translate="email">email</label>
                                                     <input type="email" id="email" ng-model="$parent.email"  ng-required="true">
                                                     <button translate="gotopayment" ng-click="address.$valid && nextToPayment()">go to payment</button>
-                                                  </form><br>
+                                                </form><br>
                                               </div>
                                              <p style="border-style: solid;border-color: grey;"></p><br>
-                                          </div>
-                                    </div>
-                                    <div class="" ng-show="nextToCustomerPayment">
+                                            </div>
+                                        </div>
+                                        <div class="" ng-show="nextToCustomerPayment">
                                       <form role="form" action="/jobFinder/thingsToSale1" method="post" enctype="multipart/form-data">
                                           <input type="hidden" name="firstName" value="{{firstName}}">
                                           <!-- <input type="hidden" name="middelName" value="{{middelName}}"> -->
@@ -347,38 +342,44 @@
                                              data-currency="eur">
                                            </script>
                                        </form>
-                                    </div>
-                                           <button class="pull-right" ng-click="backToSalePage()" translate="backToSalePage" class="btn btn-primary"></button>
-                                 </div>
+                                        </div>
+                                        <button class="pull-right" ng-click="backToSalePage()" translate="backToSalePage" class="btn btn-primary"></button>
+                                </div>
                                 <div ng-hide="items" class="panel panel-default">
                                     <div class="panel-body">
                                        <div class="gallery">
-                                            <ul ng-repeat="data in alldata | filter:catagories"><!--salethings data-->
-                                               <li>
-                                                    <div>
-                                                    <a href="">{{data.catagories}}</a>
-                                                     <a href="#thingsToBuyModal" ng-click="seeDetailsOfProduct(data.id);getDetailsOfItemForSale(data.id);" data-toggle="modal">
-                                                     <img  ng-src="/saleThingsImageCollector/{{data.fileName}}" id="1" data-scale="2.4" height="200" width="200" class="thumbnail"></a>
-                                                     <label>{{data.itemName}}</label><br>
-                                                          <span translate="price"></span>
-                                                    <p>{{data.price}}&nbsp;{{data.unit}}</p>
-                                                     <button type="button" name="button" ng-click="letsChat(data.userId,data.id)" translate="chatWithSupplier">chat with supplier</button>
-                                                     <span ng-if="data.userId==idUser"><input type="button" value="delete" class="btn-circle" ng-click="deleteThingsToSale(data.id,data.fileName)"></span>
+                                            <ul ng-repeat="data in alldata | filter:catagories">
+                                               <li class="thumbnail">
+                                                   <div>
+                                                       <a href="">{{data.catagories}}</a>
+                                                   </div>
+                                                    <div class="col-lg-8 pull-left text">
+                                                       <span> {{data.description}}</span>
+                                                    </div>
+                                                    <div class="col-lg-4 pull-right">
+                                                         <a href="#thingsToBuyModal" ng-click="seeDetailsOfProduct(data.id);getDetailsOfItemForSale(data.id);" data-toggle="modal">
+                                                        <img  ng-src="/saleThingsImageCollector/{{data.fileName}}" id="1" data-scale="2.4" height="200" width="200" class="thumbnail"></a>
+                                                        <div>
+                                                        <label>{{data.itemName}}</label><br>
+                                                         <span translate="price"></span>
+                                                         <p>{{data.price}}&nbsp;{{data.unit}}</p><br>
+                                                         <button type="button" name="button" ng-click="letsChat(data.userId,data.id)" translate="chatWithSupplier">chat with supplier</button>
+                                                         <span ng-if="data.userId==idUser"><input type="button" value="delete" class="btn-circle" ng-click="deleteThingsToSale(data.id,data.fileName)"></span> 
+                                                        </div>
                                                     </div>
                                                 </li>
                                             </ul>
                                        </div>
                                     </div>
                                 </div>
-                                </div>
-                                 <div class="modal" id="thingsToBuyModal" tablindex="-1" data-backdrop="static" data-keyboard="false">
+                                <div class="modal" id="thingsToBuyModal" tablindex="-1" data-backdrop="static" data-keyboard="false">
                                   <div class="modal-dialog model-lg">
                                       <div class="modal-content">
                                          <div class="modal-header">
                                             <button class="close" data-dismiss="modal">&times;</button>
                                              <h4 class="modal-title" translate="buyThingsPost"></h4>
                                              <div class="modal-body">
-                                                 <ul ng-repeat="data in detailsOfProduct"><!--salethings data-->
+                                                 <ul ng-repeat="data in detailsOfProduct">
                                                        <li>
                                                             <p>{{data.description}}</p>
                                                             <a href="">{{data.itemName}}</a>
@@ -389,9 +390,8 @@
                                                              <select class="" name="" ng-model="selectedSize" ng-change="onselectedSize(selectedSize)">
                                                                <option ng-repeat="data in saleItemDetails">{{data.size}}</option>
                                                              </select>
-                                                                   <span translate="amount">
-                                                                  </span>
-                                                                   <input type="number" step="1" min="1" max="100" ng-model="numberOfItems" value="{{1}}">
+                                                             <span translate="amount"></span>
+                                                             <input type="number" step="1" min="1" max="100" ng-model="numberOfItems" value="{{1}}">
                                                                   <button  class="btn btn-primary" ng-click="buy(data.id,data.itemName,data.price,data.unit,numberOfItems,data.itemId);getTotal();" translate="buy" ng-show="buyDisplay" ng-disabled="!selectedSize"></button>
                                                              <button ng-click="cancel(data.id);getTotal();" translate="cancel" class="btn btn-danger" ng-show="cancelDisplay"></button>
                                                              <span ng-if="data.userId==idUser"></span>
@@ -437,10 +437,7 @@
                                          </div>
                                      </div>
                                  </div>
-                            </div>
-                        </div>
-                    </div>
-                     <!-- End Form Elements -->
+                           
                 </div>
             </div>
             <div class="modal" id="saleItemIdInfo" tablindex="-1" data-backdrop="static" data-keyboard="false">   <!--info modal-->
@@ -452,6 +449,7 @@
                       <div class="modal-body">
                         <div class="">
                             <a href="">{{catagories}}</a>
+                            <p>{{description}}</p>
                             <div class="gallery">
                                 <img  ng-src="/saleThingsImageCollector/{{saleItemfileName}}" id="1" data-scale="2.4" height="200" width="200" class="thumbnail"></a>
                                 <label>{{saleItemName}}</label><br>
@@ -480,6 +478,7 @@
                       </div>
                   </div>
                </div>
+            </div>   
             <div class="container" id="saleItemsChatBox" ng-show="saleItemchatbox">
                    <div class="row chat-window col-xs-3 col-md-3 col-lg-4" id="chat_window_1" style="margin-left:500px;">
                       <div class="col-xs-12 col-md-12">
