--- a/views/index.html
+++ b/views/index.html
@@ -29,16 +29,10 @@
                         <span class="icon-bar"></span>
                     </button>
                       <span class="pull-left">
-                        <span class="logStyle">     Wellcome to </span>
+                        <span class="logStyle">&nbsp; &nbsp;&nbsp;Wellcome to </span>
                         <img ng-src="/assets/img/bird.png" width="90" height="90">
                         <SPAN class="logStyle" translate="yourhelplabdotcom"></SPAN>
                       </span>
-                      
-                         <!--  <div class="navbar-brand" href="index.html">
-                            
-                          </div> -->
-                        
-                     
                 </div>
                 <!-- end navbar-header -->
                 <!-- navbar-top-links -->
