--- a/public/assets/css/SearchStyle.css
+++ b/public/assets/css/SearchStyle.css
@@ -11,6 +11,10 @@ body {
     line-height: 1.5;
     padding: 0;
     margin: 0;
+    background-image: url("/assets/img/background2.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
